--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
 		<!--script src="//tympanus.net/codrops/adpacks/analytics.js"></script-->
 		<script type="module" src="./js/script" defer></script>
 	</head>
-	<body class="loading">
+	<body>
 		<main>
 			<header class="frame">
 				<h1 class="frame__title">On-Scroll Image Distortion and Grain Effect</h1>
