--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
 		<link rel="stylesheet" type="text/css" href="css/demo.css" />
 		<script>document.documentElement.className="js";</script>
 		<!--script src="//tympanus.net/codrops/adpacks/analytics.js"></script-->
-		<script type="module" src="./js/script" defer></script>
+		<script type="module" src="js/script.js" defer></script>
 	</head>
 	<body>
 		<main>
