--- a/index.html
+++ b/index.html
@@ -53,6 +53,6 @@
 				</div>
 			</div>
 		</main>
-		<!--script src="https://tympanus.net/codrops/adpacks/cda_sponsor.js"></script-->
+		<script src="https://tympanus.net/codrops/adpacks/cda_sponsor.js"></script>
 	</body>
 </html>
